//https://developers.google.com/protocol-buffers/docs/proto3
//https://github.com/apple/swift-protobuf/blob/master/Documentation/PLUGIN.md

syntax = "proto3";

message ARC_WrappedMessage {
    oneof wrapped_message {
        ARC_ColorImage color_image = 1;
    }
}

enum ARC_ImageEncoding {
    H264 = 0;
    HEVC = 1; //aka H265
    JPG = 2;
    PNG = 3;
    RAW_YUV = 4;
    RAW_RGB = 5;
    RAW_YCBCR = 6;
}

message ARC_ColorImage {
    ARC_ImageEncoding image_encoding = 1;
    repeated bytes image_header = 2;
    bytes image_data = 3;
    double timestamp_in_seconds = 4;
}
